--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp
 async-timeout
-attrs=
+attrs
 chardet
 discord.py
 idna
@@ -9,3 +9,4 @@ Pillow
 PyYAML
 typing-extensions
 yarl
+python-dotenv
